--- a/src/app/components/profile-view/profile-view.component.html
+++ b/src/app/components/profile-view/profile-view.component.html
@@ -3,10 +3,11 @@
 
   </div>
   
-  <div class="container main-container animated fadeIn" style="background-color: #E3DDE3  ">
-    <div class="container text-center">
+  <div class="container main-container animated fadeIn" style="background-color: #E3DDE3" *ngFor="let user of user" >
+    <div class="container text-center" >
       <section id="top">
-        <h3>Usuario:</h3>
+        
+        <h3>Usuario:{{user.username}}</h3>
       </section>
     </div>
     
