--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -9,45 +9,58 @@
   
         <div class="form-group animated fadeIn fast">
           <div class="form-group col-md-6">
-          <label for="inputFirstname">Nombre</label>
-          <input type="text" class="form-control" id="inputFirstname" name="firstname" ngModel #firstname="ngModel"
-          [class.is-invalid]="firstname.invalid && firstname.touched"
-          minlength="1"
-          pattern=".*\S+.*"
-          required >
-      <small class="form-text text-danger" *ngIf="firstname.invalid && firstname.touched">El campo es obligatorio</small>
+          <label for="inputusername">Nombre de usuario</label>
+         
+            <input type="text" class="form-control" name="username" [(ngModel)]="user.username" >
+       
       </div>
     </div>
-  
-          <div class="form-row animated fadeIn fast">
-              <div class="form-group col-md-6">
-                  <label for="inputEmail">Email</label>
-                  <input type="email" class="form-control" id="inputEmail" name="email" ngModel #email="ngModel"
-                  [class.is-invalid]="email.invalid && email.touched"
-                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$"
-                  minlength="1"
-                  required >
-              <small class="form-text text-danger" *ngIf="email.invalid && email.touched">Ingrese un correo valido</small> 
-              </div>
-            
-          </div>
+
+    <div class="form-group animated fadeIn fast">
+      <div class="form-group col-md-6">
+      <label for="inputusername">Nombre</label>
+     
+        <input type="text" class="form-control" name="name" [(ngModel)]="user.name" >
+   
+  </div>
+</div>
+
+<div class="form-group animated fadeIn fast">
+  <div class="form-group col-md-6">
+  <label for="inputusername">Apellido</label>
+ 
+    <input type="text" class="form-control" name="lastname" [(ngModel)]="user.lastname" >
+
+</div>
+</div>
+
+
+<div class="form-group animated fadeIn fast">
+  <div class="form-group col-md-6">
+  <label for="inputusername">Ingresa tu correo</label>
+ 
+    <input type="email" class="form-control" name="email" [(ngModel)]="user.email" >
+
+</div>
+</div>
+
+<div class="form-group animated fadeIn fast">
+  <div class="form-group col-md-6">
+  <label for="inputusername">Ingresa Contraseña</label>
+ 
+    <input type="password" class="form-control" name="password" [(ngModel)]="user.password" >
+
+</div>
+</div>
+
+
+
  
 
-          <div class="form-row animated fadeIn fast">
-              <div class="form-group col-md-6">
-                  <label for="inputPassword4">Contraseña</label>
-                  <input type="password" class="form-control" id="inputPassword4" name="password" ngModel #password="ngModel"
-                  [class.is-invalid]="password.invalid && password.touched"
-                  minlength="10"
-                  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}"
-                  required >
-                  <small class="form-text text-danger" *ngIf="password.invalid && password.touched">Debe tener un minimo de 10 caracteres, un numero y una mayuscula </small>
-              </div>
-            
-          </div>  
+          
   
-          <div class="col-12">
-            <button class="btn btn-primary" type="submit">registrarse</button>
+          <div class="col-12" class="text-center">
+            <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!user.user_id ">Crear usuario</button>
           </div>
     </form>
     <br>
