--- a/src/app/components/catalogue/catalogue.component.html
+++ b/src/app/components/catalogue/catalogue.component.html
@@ -23,7 +23,7 @@
           <img src="https://cdn.pixabay.com/photo/2018/01/01/14/21/one-3054263_960_720.jpg"  class="card-img-top" class="zoom"   alt="...">
 
           <div class="card-body">
-            <a class="card-link"style="font-size: 17px; color: black;" [routerLink]="['../product',product.product_id]">{{product.product_name}}</a>
+            <a class="card-link"style="font-size: 17px; color: black;" [routerLink]="['../product-details',product.product_id]">{{product.product_name}}</a>
             <p class="card-text">{{product.details}}</p>
             <p class="card-text">Bs. {{product.costProduct}}</p>
 
