--- a/src/app/components/product-details/product-details.component.css
+++ b/src/app/components/product-details/product-details.component.css
@@ -2,16 +2,19 @@ body{
   margin-top:20px;
   background:#eee;
 }
+.cardStyle{
+max-width: 450px;
+max-height: 550px;
+}
+
+.container-sm{
+  margin-top: 90px;
+  margin-left: 150px;
+}
 #top {
   margin-top: 45px;
 }
-.btn{
-  background: #000000;
-  color: white;
-}
-.btn:hover {
-  background-color:#3d3838b4;
-}
+
 .zoom {
   transition: transform .5s;
 }
@@ -76,9 +79,7 @@ body{
   background-color: #21c2f8
 }
 
-.product-content .product-deatil span.discount {
-  background-color: #71e134
-}
+
 
 .product-content .product-deatil span.hot {
   background-color: #fa9442
@@ -133,26 +134,6 @@ body{
   font-size: 13px
 }
 
-.load-more-btn {
-  background-color: #21c2f8;
-  border-bottom: 2px solid #037ca5;
-  border-radius: 2px;
-  border-top: 2px solid #0cf;
-  margin-top: 20px;
-  padding: 9px 0;
-  width: 100%
-}
-
-.product-block .product-deatil p.price-container span,
-.product-content .product-deatil p.price-container span,
-.product-entry .product-deatil p.price-container span,
-.shipping table tbody tr td p.price-container span,
-.shopping-items table tbody tr td p.price-container span {
-  color: #21c2f8;
-  font-family: Lato, sans-serif;
-  font-size: 24px;
-  line-height: 20px
-}
 
 .product-info.smart-form .rating label {
   margin-top: 0
@@ -335,9 +316,4 @@ list-style: none ;
 .message img.online {
   width:40px;
   height:40px;
-}
-
-.btn {
-  background-color: #5cda9b;
-  border-color: #5cda9b;
 }
