--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,57 +1,64 @@
-<div class="col-sm-12 col-md-12 col-lg-12" >
 
-  <div class="product-content product-wrap clearfix product-deatil">
+<div class="container-sm">
+
+  <button type="button" class="btn btn-light" [routerLink]="['/catalogue']">
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+    </svg>
+  </button>
+
+<div class="col-sm-12 col-md-12 col-lg-12"  >
+  <div class="clearfix product-deatil">
     <div class="row">
-        <div class="col-md-5 col-sm-12 col-xs-12">
+        <div class="col-md-10 col-sm-12 col-xs-12">
 
-  <div class="card mb-3" style="max-width: 540px;" *ngFor="let product of product" >
+
+  <div class="card mb-3" name="cardStyle">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="https://cdn.shopify.com/s/files/1/0028/9597/0349/products/BLUSA8_1024x.jpg" class="img-fluid rounded-start" class="zoom"  alt="...">
+        <img src="https://cdn.shopify.com/s/files/1/0028/9597/0349/products/BLUSA8_1024x.jpg" class="img-fluid rounded-start zoom" alt="..." >
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8" style="left:120px">
         <div class="card-body">
-          <h5 class="card-title">{{product.product_name}}</h5>
-          <p class="card-text">{{product.details}}</p>
+          <h1 class="card-title" style="margin: 10px">{{product.product_name}}</h1>
+          <h5 class="card-text" style="margin: 10px">{{product.details}}</h5>
+          <h5 class="card-text" style="margin: 10px">Bs. {{product.costProduct}}</h5>
 
-          <dl class="">
-          <dt><p class="card-text">Talla:{{product.size}}</p></dt>
+          <dl class="" style="margin: 10px">
+            <dt><p class="card-text">Talla
+              <select id = "inputSize" name="size" style="margin: 10px" ngModel #quantity="ngModel">
+                <option value="1">XS</option>
+                <option value="2">S</option>
+                <option value="3">M</option>
+                <option value="4">L</option>
+                <option value="5">XL</option>
+                <option value="6">XXL</option>
+              </select>
+            </p></dt>
 
-          <select id = "inputSize" name="size" ngModel #quantity="ngModel">
-            <option value="1">XS</option>
-            <option value="2">S</option>
-            <option value="3">M</option>
-            <option value="4">L</option>
-            <option value="5">XL</option>
-            <option value="6">XXL/option>
-          </select>
-
-          <dt><p class="card-text">Cantidad</p></dt>
-
-          <select id = "inputQuantity" name="quantity" ngModel #quantity="ngModel">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-          </select>
-        </dl>
-
-        <button type="button" class="btn btn-primary" routerLink="/cart"> Agregar al carrito</button>
-
+          </dl>
         </div>
+
+        <div  style="margin: 30px">
+          <button type="button" style="margin: 10px" class="btn btn-dark" routerLink="/cart">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+              <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+            </svg> Agregar al carrito </button>
+
+          <button type="button" class="btn btn-dark" routerLink="/cart">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z"/>
+              <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
+            </svg> Realizar Pedido</button>
+        </div>
+
       </div>
     </div>
-  </div>
 
+    </div>
         </div>
     </div>
   </div>
-
+</div>
 </div>
 
