--- a/src/app/components/user/user-admin/user-form.component.html
+++ b/src/app/components/user/user-admin/user-form.component.html
@@ -15,12 +15,8 @@
       <div class="col-md-6 position-relative"><br><br>
 
         <label for="inputFirstname">Nombre</label>
-        <input type="text" class="form-control" id="inputName" name="name" ngModel #name="ngModel"
-        [class.is-invalid]="name.invalid && name.touched"
-        minlength="1"
-        pattern=".*\S+.*"
-        required >
-        <small class="form-text text-danger" *ngIf="name.invalid && name.touched">El campo es obligatorio</small>
+        <input type="text" class="form-control" id="inputName"  name="name" [(ngModel)]="user.name"
+        >
 
       </div>
 
@@ -31,12 +27,8 @@
 
 
           <label for="inputLastname">Apellido</label>
-          <input type="text" class="form-control" id="inputLastname" name="lastname" ngModel #lastname="ngModel"
-          [class.is-invalid]="lastname.invalid && lastname.touched"
-          minlength="1"
-          pattern=".*\S+.*"
-          required >
-          <small class="form-text text-danger" *ngIf="lastname.invalid && lastname.touched">El campo es obligatorio</small>
+          <input type="text" class="form-control" id="inputLastname" name="lastname" [(ngModel)]="user.lastname"
+          >
 
       </div>
 
@@ -44,12 +36,8 @@
       <div class="col-md-6 position-relative">
 
         <label for="inputEmail">Email</label>
-        <input type="email" class="form-control" id="inputEmail" name="email" ngModel #email="ngModel"
-        [class.is-invalid]="email.invalid && email.touched"
-        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$"
-        minlength="1"
-        required >
-    <small class="form-text text-danger" *ngIf="email.invalid && email.touched">Ingrese un correo valido</small>
+        <input type="email" class="form-control" id="inputEmail"  name="email" [(ngModel)]="user.email"
+        >
 
 
       </div>
@@ -57,12 +45,8 @@
 
       <div class="col-md-6 position-relative">
         <label for="inputRol">Rol</label>
-        <input type="rol" class="form-control" id="inputRol" name="rol" ngModel #rol="ngModel"
-        [class.is-invalid]="rol.invalid && rol.touched"
-        minlength="2"
-        pattern=".*\S+.*"
-        required >
-        <small class="form-text text-danger" *ngIf="rol.invalid && rol.touched">El campo es obligatorio</small>
+        <input type="rol" class="form-control" id="inputRol"  name="rol" [(ngModel)]="rol" >
+
 
 
     </div>
@@ -74,26 +58,20 @@
 
 
         <label for="inputFirstname">Nombre de usuario</label>
-        <input type="text" class="form-control" id="inputUsername" name="username" ngModel #username="ngModel"
-        [class.is-invalid]="username.invalid && username.touched"
-        minlength="1"
-        pattern=".*\S+.*"
-        required >
-    <small class="form-text text-danger" *ngIf="username.invalid && username.touched">El campo es obligatorio</small>
+        <input type="text" class="form-control" id="inputUsername"  name="username" [(ngModel)]="user.username" >
+
 
       </div>
 
 
 
-      <div class="col-md-6 position-relative">
-        <label for="inputPassword4">Contraseña</label>
-                  <input type="password" class="form-control" id="inputPassword4" name="password" ngModel #password="ngModel"
-                  [class.is-invalid]="password.invalid && password.touched"
-                  minlength="10"
-                  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}"
-                  required >
-                  <small class="form-text text-danger" *ngIf="password.invalid && password.touched">Debe tener un minimo de 10 caracteres, un numero y una mayuscula </small>
+      <div class="form-group col-md-6">
+        <label for="inputusername">Ingresa Contraseña</label>
+
+          <input type="password" class="form-control" name="password" [(ngModel)]="user.password" >
+
       </div>
+
 
 
 
@@ -117,4 +95,3 @@
 
 
 </div>
-
