--- a/src/app/components/profile-view/profile-view.component.html
+++ b/src/app/components/profile-view/profile-view.component.html
@@ -3,7 +3,7 @@
 
   </div>
   
-  <div class="container main-container animated fadeIn" style="background-color: #E3DDE3" *ngFor="let user of user" >
+  <div class="container main-container animated fadeIn" style="background-color: #E3DDE3" >
     <div class="container text-center" >
       <section id="top">
         
@@ -84,17 +84,20 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Direccion</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                    
-                    </div>
+                <div class="row">
+                  <div class="col-sm-3">
+                    <h6 class="mb-0">Rol de Usuario</h6>
+                  </div>
+                  <div class="col-sm-9 text-secondary">
+                    {{user.rol}}
                   </div>
                   <hr>
-                 
                 </div>
+
+                </div>
+               
+               
+              </div>
               </div>
               
           </div>
