--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,72 @@
-<p>cart works!</p>
+<div class="px-4 px-lg-0">
+
+  <div class="container text-white py-5 text-center">
+    <h1 style="color: black;">Carrito de Compras</h1>
+  </div>
+
+  <div class="pb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+
+          <div class="table-responsive " style="font-size: 16px;">
+
+            <table class="table align-middle">
+
+              <thead>
+                <tr>
+                  <th scope="col" class="border-0 bg-dark">
+                    <div class="py-2 text-uppercase" style="color: white;">Producto</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-dark" >
+                    <div class="py-2 text-uppercase" style="color: white;">Precio</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-dark">
+                    <div class="py-2 text-uppercase" style="color: white;">Cantidad</div>
+                  </th>
+                  <th scope="col" class="border-0 bg-dark">
+                    <div class="py-2 text-uppercase" style="color: white;">Acción</div>
+                  </th>
+                </tr>
+              </thead>
+
+
+              <tbody *ngFor="let product of product">
+                <tr>
+                  <th scope="row" class="border-0">
+                    <div class="py-2">
+                      <img src="https://cdn.shopify.com/s/files/1/0028/9597/0349/products/BLUSA8_1024x.jpg" width="70" class="img-fluid rounded shadow-sm" alt="" >
+                      <div class="ml-3 d-inline-block align-middle">
+                        <h5 class="mb-0"> <a class="text-dark font-wight-bolde align-middle">{{product.product_name}}</a></h5>
+                        <span class="text-muted font-weight-normal font-italic d-block">Detalles: {{product.details}}</span>
+                        <span class="text-muted font-weight-normal font-italic d-block">Talla: {{product.size}}</span>
+                        <span class="text-muted font-weight-normal font-italic d-block">Color: {{product.color}}</span>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="border-0 align-middle"><strong>Bs. {{product.costProduct}}</strong></td>
+                  <td class="border-0 align-middle"><strong>{{product.quantity}}</strong></td>
+
+                  <td style="vertical-align: inherit;">
+
+                      <button  name="btnDelete" style="margin: 10px"  class="btn btn-danger" (click)="delete(product)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                        </svg>Eliminar</button>
+
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+    </div>
+  </div>
+
