--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -347,3 +347,146 @@ z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga alg√
 #contact {
   margin-top: 50px;
 }
+
+
+
+
+.containerbien{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1100px;
+  margin: auto;
+}
+.box{
+  width: 300px;
+  height: 400px;
+  position: relative;
+  overflow: hidden;
+  margin: 20px;
+  border:3px solid #fff;
+}
+.box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.capa{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:#fff;
+  transform: scale(0);
+  transition: .3s ease;
+}
+.box:hover .capa{
+  transform: scale(1);
+}
+@media only screen and (max-width:900px){
+  .containerbien{
+      width: 90%;
+      margin: auto;
+      flex-wrap: wrap;
+  }
+}
+
+
+
+
+.wrap{
+	width: 1100px;
+	margin: 50px auto;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+}
+
+.tarjeta-wrap{
+	margin: 10px;
+	-webkit-perspective: 800;
+	perspective: 800;
+}
+
+.tarjeta{
+	width: 300px;
+	height: 350px;
+	background: #F29720;
+	position: relative;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-webkit-transition: .7s ease;
+	transition: .7s ease;
+	-webkit-box-shadow: 0px 10px 15px -5px rgba(0,0,0,0.65);
+	box-shadow: 0px 10px 15px -5px rgba(0,0,0,0.65);
+
+}
+
+.adelante, .atras{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.adelante{
+	width: 100%;
+}
+
+.atras{
+	-webkit-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+
+	padding: 15px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+
+	text-align: center;
+	color: #fff;
+	font-family: "open sans";
+}
+
+.tarjeta-wrap:hover .tarjeta{
+	-webkit-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+}
+
+.card1{
+	background-image: url(https://www.madridposicionamientoweb.es/wp-content/uploads/2019/03/Probador-virtual.jpg);
+	background-size: cover;
+}
+
+.card2{
+	background-image: url(https://i.pinimg.com/564x/b8/23/f1/b823f11d793dff61542c99807b0d8f4b.jpg);
+	background-size: cover;
+}
+
+.card3{
+	background-image: url(https://www.alo.co/sites/default/files/imagecache/284x284/forever.jpg);
+	background-size: cover;
+}
