--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,10 +42,47 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<br>
+<br>
+
+
+
+<div class="wrap">
+		<div class="tarjeta-wrap">
+			<div class="tarjeta">
+				<div class="adelante card1"></div>
+				<div class="atras">
+        <h1>MISION</h1>
+        <br>
+					<p>Satisfacer los requerimientos y expectativas de nuestros clientes con productos de alta calidad
+          y novedosos diseño</p>
+				</div>
+			</div>
+		</div>
+		<div class="tarjeta-wrap">
+			<div class="tarjeta">
+				<div class="adelante card2"></div>
+				<div class="atras">
+         <h1>VISION</h1>
+        <br>
+					<p>Crecimiento mediante la constante inovacion y adquisicion de tecnologia que permita mejorar la efectividad</p>
+				</div>
+			</div>
+		</div>
+		<div class="tarjeta-wrap">
+			<div class="tarjeta">
+				<div class="adelante card3"></div>
+				<div class="atras">
+        <h1>VALORES</h1>
+					<p>Trato justo y correcto hacia nuestros clientes pra fomentar dureciones duraderascon ellos.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 <br>
 <br>
-<br>
+
 <div class="container">
     <div class="row">
       <div class="col-sm-6">
@@ -70,10 +107,41 @@
     </div>
     </div>
   </div>
-<br>
-<br>
-<br>
-<br>
+  <div class="containerbien">
+        <div class="box">
+            <a href="#">
+                <img src="assets/img/prenda1.jpeg">
+                <div class="capa">
+                    <h2>Polera blanca</h2>
+                </div>
+            </a>
+        </div>
+        
+        <div class="box">
+            <a href="#">
+                <img src="assets/img/prenda3.jpeg">
+                <div class="capa">
+                    <h2>Canguro Nike</h2>
+                </div>
+            </a>
+        </div>
+        
+        <div class="box">
+            <a href="#">
+                <img src="assets/img/prenda4.jpeg">
+                <div class="capa">
+                    <h2>Canguro Adidas</h2>
+                </div>
+            </a>
+        </div>
+    </div>
+
+
+
+
+
+
+
  <div class="container">
     <div class="row">
       <div class="col-sm-5">
@@ -91,118 +159,17 @@
               que significa que hemos demostrado que los principios de cumplen cabalmente en toda
               la cadena de comercialización y produccción. La importancia va de dos lados; la del cliente
                y la del productor
+               
       </div>
     </div>
     </div>
       <div class="col-sm-6">
-        <img src=".../../../assets/img/portada50.jpg" class="img-fluid" alt="">
+        <img src="https://pentacredit.com/uploads/blog/post/200019_tarjetas-comprar-por-internet.jpg" class="img-fluid" alt="">
       </div>
     </div>
   </div>
-<br>
-<br>
-<br>
-<div class="container">
-<h2 class="text-center">Novedades</h2>
-<br>
-<br>
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="row">  
 
-      <div class="col-3"> <img src="assets/img/prenda1.jpeg" class="d-block w-100" alt="..." > </div>
-       <div class="col-3"> <img src="assets/img/prenda2.jpeg" class="d-block w-100" alt="..."> </div>
-        <div class="col-3"> <img src="assets/img/prenda3.jpeg" class="d-block w-100" alt="..."> </div>
-         <div class="col-3"> <img src="assets/img/prenda4.jpeg" class="d-block w-100" alt="..."> </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="row">  
-        <div class="col-3"> <img src="assets/img/animacion.jpg" class="d-block w-100" alt="..."> </div>
-       <div class="col-3"> <img src="assets/img/animacion1.jpg" class="d-block w-100" alt="..."> </div>
-        <div class="col-3"> <img src="assets/img/animacion2.jpg" class="d-block w-100" alt="..."height="260"> </div>
-         <div class="col-3"> <img src="assets/img/animacion3.jpg" class="d-block w-100" alt="..." height="260"> </div>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div>
-<br>
-<br>
-
-
-
-
-
-
-
-<div class="section-1">
-   <div class="container text-center">
-
-    <section id="top">
-      <h1> </h1>
-      <h2 class="heading-1">Nuestros Somos</h2>
-    </section>
-
-   <p>
-Somos una tienda joven que busca rescatar y fomentar artesanias tradicionales de nuestro
-pais, procurando la preservacion de las tecnicas ya existentes y ofreciendo sustentos para las familias
-de los artesanos, mediante compra directa de cada producto artesanal
-   </p>
-
-   <div class="row justify-content-center text-center">
-   <div class="col md 4">
-
-   <div class="card" style="width: 20 rem;">
-   <img  src="assets/img/img3.jpg"alt="image1" class="card-img-top">
-   <div class="card body">
-     <h4 class="card-title">Mision</h4>
-     <p> satisfacer los requerimientos y expectativas de nuestros clientes con productos de alta
-       calidad y novedosos diseños, garantizando la permanencia y el desarrollo</p>
-   </div>
-  </div>
-</div>
-<div class="col md 4">
-
-  <div class="card" style="width: 20 rem;">
-  <img  src="assets/img/artesanal.jpg"alt="image2" class="card-img-top">
-  <div class="card body">
-    <h4 class="card-title">Vision</h4>
-    <p> Cumplimiento, mediante la constante innovación y adquisición de tecnologías que
-      permitan mejorar la efectividad, agregado a los productos que fabrica.</p>
-  </div>
- </div>
-</div>
-<div class="col md 4">
-
-  <div class="card" style="width: 20 rem;">
-  <img  src="assets/img/p1.jpg"alt="imag3" class="card-img-top">
-  <div class="card body">
-    <h4 class="card-title">Valores</h4>
-    <p> Trato justo y correcto hacia nuestros clientes es clave para fomentar relaciones duraderas con ellos.
-      Respetamos y valoramos inmensamente la confianza de nuestros clientes
-</p>
-  </div>
- </div>
-</div>
-  </div>
-
-
-
-
-
-
-
- 
+  
 
 
   <section id="portfolio" class="portfolio">
